# fatcom

./: .gitignore  CMakeLists.txt  README.md  test.cpp
include/fatcom/: fatcom.hpp  fatcom_iptr.hpp  fatcom_macros.hpp  fatcom_thin.hpp  fatcom_uuid.hpp
